--- a/AppReport/assets/www/view/reportForm.html
+++ b/AppReport/assets/www/view/reportForm.html
@@ -30,6 +30,11 @@
 		<div id="report1"></div>
       <div class="new_ui-workplan-a"></div>
 	</div>
+	<div data-role="content">
+	    <div id="report2_form"></div>
+		<div id="report2"></div>
+      <div class="new_ui-workplan-a"></div>
+	</div>
 </div>
 
 
